--- a/Gravity-tube/public/index.html
+++ b/Gravity-tube/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   
-    <title>React App</title>
+    <title>Gravity Tube</title>
     <link rel="stylesheet" href="https://zero-gravity-ui.netlify.app/CSS/global.css">
   </head>
   <body>
